
22 Feb 2006 - 2.1.0-rc7+
------------------------

* Removed the (harmless) message mentioning LAST_UPDATE_TIME missing.

* It was not possible to remove a rule placed in phase 4 using
  SecRuleRemoveById or SecRuleRemoveByMsg. Fixed.

* Fixed a problem with incorrectly setting requestBodyProcessor using
  the ctl action.

* Bundled Core Rules 2.1-1.3.2b4.

* Updates to the reference manual.

* Reversed the return values of @validateDTD and @validateSchema, to
  make them consistent with other operators.

* Added a few helpful debug messages in the XML validation area.

* Updates to the reference manual.

* Fixed the validateByteRange operator.

* Default value for the status action is now 403 (as it was supposed to
  be but it was effectively 500).

* Rule exceptions (removing using an ID range or an regular expression)
  is now applied to the current context too. (Previously it only worked
  on rules that are inherited from the parent context.)

* Fix of a bug with expired variables.

* Fixed regular expression variable selectors for many collections.

* Performance improvements - up to two times for real-life work loads!

* Memory consumption improvements (not measured but significant).

* The allow action did not work in phases 3 and 4. Fixed.

* Unlocked collections GLOBAL and RESOURCE.

* Added support for variable expansion in the msg action.

* New feature: It is now possible to make relative changes to the
  audit log parts with the ctl action. For example: "ctl:auditLogParts=+E".

* New feature: "tag" action. To be used for event categorisation.

* XML parser was not reporting errors that occured at the end
  of XML payload.

* Files were not extracted from request if SecUploadKeepFiles was
  Off. Fixed.

* Regular expressions that are too long are truncated to 256
  characters before used in error messages. (In order to keep
  the error messages in the log at a reasonable size.)

* Fixed the sha1 transformation function.

* Fixed the skip action.
